--- a/信号与系统/变换对比表.md
+++ b/信号与系统/变换对比表.md
@@ -64,7 +64,7 @@
 | $e^{j\omega_0 t}$ | $2\pi\delta(\omega-\omega_0)$ |
 | $\cos(\omega_0 t)$ | $\pi[\delta(\omega-\omega_0) + \delta(\omega+\omega_0)]$ |
 | $\sin(\omega_0 t)$ | $j\pi[\delta(\omega+\omega_0) - \delta(\omega-\omega_0)]$ |
-| $ \begin{cases} 1, & \|t\| \leq T_1 \\ 0, & \|t\| > T_1 \end{cases}$ | $2T_1 \text{Sa}(\omega T_1) =2T_1 \frac{\sin(\omega T_1)}{\omega T_1}$ |
+| $$ \begin{cases} 1, & \|t\| \leq T_1 \\ 0, & \|t\| > T_1 \end{cases}$$ | $2T_1 \text{Sa}(\omega T_1) =2T_1 \frac{\sin(\omega T_1)}{\omega T_1}$ |
 | $\frac{W}{\pi} Sa(Wt)$ | $ \begin{cases} 1, & \|\omega\| \leq W \\ 0, & \|\omega\| > W \end{cases}$ |
 | $\sum_{n=-\infty}^{\infty} \delta(t-nT)$ | $\frac{2\pi}{T}\sum_{k=-\infty}^{\infty} \delta(\omega-k\omega_0)$，其中$\omega_0=\frac{2\pi}{T}$ |均匀冲激串 <br> uniform impulse train|
 
