--- a/信号与系统/变换对比表.md
+++ b/信号与系统/变换对比表.md
@@ -110,7 +110,7 @@
 | **时间反转**<br>**Time Reversal** | $f(-t) \leftrightarrow c_{-n}$ | $x[-n] \leftrightarrow X[-k]$ | $f(-t) \leftrightarrow F(-\omega)$ | $x[(-n))_N] \leftrightarrow X[(-k))_N]$ | - | $f(-n) \leftrightarrow F(z^{-1})$ |
 | **时间尺度变换**<br>**Time Scaling** | $f(at) \leftrightarrow c_n$ (周期变为T/a) | - | $f(at) \leftrightarrow \frac{1}{\|a\|}F(\omega/a)$ | - | $f(at) \leftrightarrow \frac{1}{a}F(s/a)$ (a>0) | - |
 | **乘法性质**<br>**Multiplication** | $f(t)g(t) \leftrightarrow \sum_{m=-\infty}^{\infty} c_{n-m}d_m$ | $x[n]y[n] \leftrightarrow \frac{1}{N}\sum_{l=0}^{N-1} X[l]Y[k-l]$ | $f(t)g(t) \leftrightarrow \frac{1}{2\pi}F(\omega)*G(\omega)$ | $x[n]y[n] \leftrightarrow \frac{1}{N}X[k]\circledast Y[k]$ | - | - |
-| **共轭对称性 / Conjugate Symmetry** | $f^*(t) \leftrightarrow c_{-n}^*$ | $x^*[n] \leftrightarrow X^*[(-k))_N]$ | $f^*(t) \leftrightarrow F^*(-\omega)$ | $x^*[n] \leftrightarrow X^*[(-k))_N]$ | $f^*(t) \leftrightarrow F^*(s^*)$ | $f^*[n] \leftrightarrow F^*(z^*)$ |
+| **共轭对称性**<br>**Conjugate Symmetry** | $ f^\ast (t) \leftrightarrow c_{-n}^\ast $ | $x^*[n] \leftrightarrow X^*[(-k))_N]$ | $f^*(t) \leftrightarrow F^*(-\omega)$ | $x^*[n] \leftrightarrow X^*[(-k))_N]$ | $f^*(t) \leftrightarrow F^*(s^*)$ | $f^*[n] \leftrightarrow F^*(z^*)$ |
 | **频移性**<br>**Frequency Shifting** | $f(t)e^{jm\omega_0 t} \leftrightarrow c_{n-m}$ | $x[n]e^{j2\pi ln/N} \leftrightarrow X[k-l]$ | $f(t)e^{j\omega_0 t} \leftrightarrow F(\omega-\omega_0)$ | $x[n]e^{j2\pi ln/N} \leftrightarrow X[k-l]$ | $f(t)e^{-s_0 t} \leftrightarrow F(s+s_0)$ | $a^n f(n) \leftrightarrow F(z/a)$ |
 | **微分性**<br>**Differentiation** | $\frac{df(t)}{dt} \leftrightarrow jn\omega_0 c_n$ | - | $\frac{df(t)}{dt} \leftrightarrow j\omega F(\omega)$ | - | $\frac{df(t)}{dt} \leftrightarrow sF(s)-f(0^-)$ | - |
 | **差分性**<br>**Difference** | - | $x[n+1]-x[n] \leftrightarrow (1-e^{-j2\pi k/N})X[k]$ | - | $x[n+1]-x[n] \leftrightarrow (1-e^{-j2\pi k/N})X[k]$ | - | $f(n+1) \leftrightarrow zF(z)-zf(0)$ |
