--- a/信号与系统/变换对比表.md
+++ b/信号与系统/变换对比表.md
@@ -7,8 +7,8 @@
 |---------------------------|------------------------|------------------------|------------------------------|------------------------------------------|------------------------------|
 | **FS** | 傅里叶级数 | Fourier Series | $c_n = \frac{1}{T}\int_{-T/2}^{T/2} f(t)e^{-jn\omega_0 t}dt$ | $f(t) = \sum_{n=-\infty}^{\infty} c_n e^{jn\omega_0 t}$ | 周期连续信号<br>Periodic Continuous Signals |
 | **DFS** | 离散傅里叶级数 | Discrete Fourier Series | $X[k] = \sum_{n=0}^{N-1} x[n]e^{-j2\pi kn/N}$ | $x[n] = \frac{1}{N}\sum_{k=0}^{N-1} X[k]e^{j2\pi kn/N}$ | 周期离散信号<br>Periodic Discrete Signals |
-| **FT** | 傅里叶变换 | Fourier Transform | $F(\omega) = \int_{-\infty}^{\infty} f(t)e^{-j\omega t}dt$ | $f(t) = \frac{1}{2\pi}\int_{-\infty}^{\infty} F(\omega)e^{j\omega t}d\omega$ | 非周期连续信号<br>Aperiodic Continuous Signals |
-| **DFT** | 离散傅里叶变换 | Discrete Fourier Transform | $X[k] = \sum_{n=0}^{N-1} x[n]e^{-j2\pi kn/N}$ | $x[n] = \frac{1}{N}\sum_{k=0}^{N-1} X[k]e^{j2\pi kn/N}$ | 有限长离散信号<br>Finite-Length Discrete Signals |
+| **FT** | 傅里叶变换 | Fourier Transform | $\color{red}X(j\omega) = \int_{-\infty}^{\infty} x(t)e^{-j\omega t}dt$ <br> $\color{red} P(jω) = 2π  \sum_{k=-∞}^{+∞} a_k  δ(ω - kω₀) $ | $\color{red}x(t) = \frac{1}{2\pi}\int_{-\infty}^{\infty} X(j\omega)e^{j\omega t}d\omega$ | 非周期连续信号<br>Aperiodic Continuous Signals |
+| **DFT** | 离散傅里叶变换 | Discrete Fourier Transform | $\color{red}X(e^{j\omega}) =\sum_{n=-\infty}^{\infty} x[n]e^{-j\omega n}$ <br> $\color{red}X(e^{j\omega}) =2\pi \sum_{k=-\infty}^{\infty} a_k \delta(\omega-\frac{2\pi}{N}k)$ | $\color{red}x[n] = \frac{1}{2\pi} \int_{2\pi}X(e^{j\omega})e^{j\omega n} d\omega $ | 有限长离散信号<br>Finite-Length Discrete Signals |
 | **LT/s变换** | 拉普拉斯变换 | Laplace Transform | $F(s) = \int_{0}^{\infty} f(t)e^{-st}dt$ | $f(t) = \frac{1}{2\pi j}\int_{\sigma-j\infty}^{\sigma+j\infty} F(s)e^{st}ds$ | 因果连续信号<br>Causal Continuous Signals |
 | **z变换** | z变换 | z-Transform | $F(z) = \sum_{n=0}^{\infty} f(n)z^{-n}$ | $f(n) = \frac{1}{2\pi j}\oint F(z)z^{n-1}dz$ | 因果离散信号<br>Causal Discrete Signals |
 
@@ -45,39 +45,47 @@
 
 ### 3.2 离散傅里叶级数常用变换对 / Discrete Fourier Series Common Transform Pairs
 
-| 时域序列 x[n]<br>Time Domain Sequence | 频域系数 X[k]<br>Frequency Domain Coefficients |
+| 时域序列 x[n]<br>Time Domain Sequence | 频域系数 X(e^{jω})<br>Frequency Domain Coefficients |
 |---------------------------------------|------------------------------------------------|
 | $\delta[n]$ | $1$ |
-| $1$ (常数序列)<br>(Constant Sequence) | $N\delta[k]$ |
-| $e^{j2\pi k_0 n/N}$ | $N\delta[k-k_0]$ |
-| $\cos(2\pi k_0 n/N)$ | $\frac{N}{2}[\delta[k-k_0] + \delta[k+k_0]]$ |
-| $\sin(2\pi k_0 n/N)$ | $\frac{N}{2j}[\delta[k-k_0] - \delta[k+k_0]]$ |
+| $1$ (常数序列)<br>(Constant Sequence) | $2\pi\sum_{k=-\infty}^{\infty}\delta(\omega-2\pi k)$ |
+| $e^{j\omega_0 n}$ | $2\pi\sum_{k=-\infty}^{\infty}\delta(\omega-\omega_0-2\pi k)$ |
+| $\cos(\omega_0 n)$ | $\pi\sum_{k=-\infty}^{\infty}[\delta(\omega-\omega_0-2\pi k) + \delta(\omega+\omega_0-2\pi k)]$ |
+| $\sin(\omega_0 n)$ | $\frac{\pi}{j}\sum_{k=-\infty}^{\infty}[\delta(\omega-\omega_0-2\pi k) - \delta(\omega+\omega_0-2\pi k)]$ |
+| $  x[n]$| $ a_k $|
+| $ a_n $ | $ \frac{1}{N} x[-k] $ |
 
 ### 3.3 傅里叶变换常用变换对 / Fourier Transform Common Transform Pairs
 
-| 时域信号 f(t) | 频域信号 F(ω) | 备注 tips|
+| 时域信号 x(t) | 频域信号 X(jω) | 备注 tips|
 |--------------|---------------|-------------|
-| $\delta(t)$ | $1$ |
-| $1$ | $2\pi\delta(\omega)$ |
-| $e^{-at}u(t)$ (a>0) | $\frac{1}{a+j\omega}$ |
-| $e^{-a\|t\|}$ (a>0) | $\frac{2a}{a^2+\omega^2}$ |
-| $e^{j\omega_0 t}$ | $2\pi\delta(\omega-\omega_0)$ |
+| $\delta(t)$ | $1$ ||
+| $1$ | $2\pi\delta(\omega)$ ||
+| $u(t)$ | $\frac{1}{j\omega}+\pi\delta(\omega)$||
+| $e^{-at}u(t)$ (a>0) | $\frac{1}{a+j\omega}$ ||
+|$\color{red}\frac{t^{n-1}}{(n-1)!}e^{-at}u(t)$ (a>0)|$\color{red}\frac{1}{(a+j\omega)^n}$||
+| $e^{-a\|t\|}$ (a>0) | $\frac{2a}{a^2+\omega^2}$ ||
+| $e^{j\omega_0 t}$ | $2\pi\delta(\omega-\omega_0)$ ||
+| $ \begin{cases} 1, & \|t\| \leq T_1 \\ 0, & \|t\| > T_1 \end{cases} $ | $2T_1 \text{Sa}(\omega T_1) = \frac{2\sin(\omega T_1)}{\omega}$ | |
 | $\cos(\omega_0 t)$ | $\pi[\delta(\omega-\omega_0) + \delta(\omega+\omega_0)]$ |
 | $\sin(\omega_0 t)$ | $j\pi[\delta(\omega+\omega_0) - \delta(\omega-\omega_0)]$ |
-| $ \begin{cases} 1, & \|t\| \leq T_1 \\ 0, & \|t\| > T_1 \end{cases} $ | $2T_1 \text{Sa}(\omega T_1) =2T_1 \frac{\sin(\omega T_1)}{\omega T_1}$ | |
-| $\frac{W}{\pi} Sa(Wt)$ | $ \begin{cases} 1, & \|\omega\| \leq W \\ 0, & \|\omega\| > W \end{cases}$ |
+| $\frac{W}{\pi} Sa(Wt)$ | $ \begin{cases} 1, & \|\omega\| \leq W \\ 0, & \|\omega\| > W \end{cases}$ ||
 | $\sum_{n=-\infty}^{\infty} \delta(t-nT)$ | $\frac{2\pi}{T}\sum_{k=-\infty}^{\infty} \delta(\omega-k\omega_0)$，其中 $\omega_0=\frac{2\pi}{T}$ |均匀冲激串 <br> uniform impulse train|
+|周期方波 $ \begin{cases} 1, & \|t\| \leq T_1 \\ 0, & T_1 < \|t\| \leq \frac{T}{2} \end{cases} $ <br> 和$x(t+T)=x(t)$ | $\sum_{k=-\infty}^{+\infty} \frac{2\sin{k\omega_0T_1}}{k}\delta(\omega-k\omega_0)$||
 
 ### 3.4 离散傅里叶变换常用变换对 / Discrete Fourier Transform Common Transform Pairs
 
-| 时域序列 x[n]<br>Time Domain Sequence | 频域序列 X[k]<br>Frequency Domain Sequence |
+| 时域序列 x[n]<br>Time Domain Sequence | 频域序列 $X(e^{j\omega})$<br>Frequency Domain Sequence |
 |---------------------------------------|---------------------------------------------|
 | $\delta[n]$ | $1$ |
-| $\delta[n-n_0]$ | $e^{-j2\pi kn_0/N}$ |
-| $1$ (n=0,...,N-1) | $N\delta[k]$ |
-| $a^n$ (n=0,...,N-1) | $\frac{1-a^N e^{-j2\pi k/N}}{1-ae^{-j2\pi k/N}}$ |
-| $\cos(2\pi k_0 n/N)$ | $\frac{N}{2}[\delta[k-k_0] + \delta[k+k_0]]$ |
-| $\sin(2\pi k_0 n/N)$ | $\frac{N}{2j}[\delta[k-k_0] - \delta[k+k_0]]$ |
+| $\delta[n-n_0]$ | $e^{-j\omega n_0}$ |
+| $1$ (n=0,...,N-1) | $\sum_{k=-\infty}^{\infty}2\pi \delta(\omega\color{red}-2\pi k\color{black})$ |
+| $u[n]$| $ \frac{1}{1-e^{-j\omega}} + \sum_{k=-\infty}^{+\infty} \pi \delta(\omega-2\pi k) $|
+| $a^{\lvert n\rvert}\;(\lvert a\rvert<1)$ | $\frac{1-a^2}{1+a^2-2a\cos\omega}$ |
+| $a^n\,u[n]\;(\lvert a\rvert<1)$ | $\displaystyle \frac{1}{1 - ae^{-j\omega}}$ |
+| $\frac{(n+r-1)!}{n! (r-1)!} a^n\,u[n]\;(\lvert a\rvert<1)$ | $\displaystyle \frac{1}{(1 - ae^{-j\omega})^r}$ |
+| $\displaystyle \begin{cases} 1, & \lvert n\rvert \le N_1\\ 0, & \lvert n\rvert > N_1 \end{cases}$ | $\displaystyle \frac{\sin\bigl[(2N_1+1)\omega/2\bigr]}{\sin(\omega/2)}$ |
+| $\color{red}e^{j\omega_0 n}$ | $\sum_{k=-\infty}^{\infty}2\pi \delta(\omega-\omega_0\color{red}-2\pi k\color{black})$ 
 
 ### 3.5 拉普拉斯变换常用变换对 / Laplace Transform Common Transform Pairs
 
@@ -87,8 +95,8 @@
 | $u(t)$ | $\frac{1}{s}$ | $\text{Re}(s) > 0$ |
 | $e^{-at}u(t)$ | $\frac{1}{s+a}$ | $\text{Re}(s) > -a$ |
 | $t^n u(t)$ | $\frac{n!}{s^{n+1}}$ | $\text{Re}(s) > 0$ |
-| $\cos(\omega_0 t)u(t)$ | $\frac{s}{s^2+\omega_0^2}$ | $\text{Re}(s) > 0$ |
-| $\sin(\omega_0 t)u(t)$ | $\frac{\omega_0}{s^2+\omega_0^2}$ | $\text{Re}(s) > 0$ |
+| $\color{red}\cos(\omega_0 t)u(t)$ | $\color{red}\frac{s}{s^2+\omega_0^2}$ | $\color{red}\text{Re}(s) > 0$ |
+| $\color{red}\sin(\omega_0 t)u(t)$ | $\color{red}\frac{\omega_0}{s^2+\omega_0^2}$ | $\color{red}\text{Re}(s) > 0$ |
 
 ### 3.6 z变换常用变换对 / z-Transform Common Transform Pairs
 
@@ -96,7 +104,7 @@
 |--------------|-------------|--------|
 | $\delta(n)$ | $1$ | 全z平面 |
 | $u(n)$ | $\frac{z}{z-1}$ | $\|z\| > 1$ |
-| $a^n u(n)$ | $\frac{z}{z-a}$ | $\|z\| > \|a\|$ |
+| $\color{red}a^n u(n)$ | $\color{red}\frac{z}{z-a}$ | $\color{red}\|z\| > \|a\|$ |
 | $na^n u(n)$ | $\frac{az}{(z-a)^2}$ | $\|z\| > \|a\|$ |
 | $\cos(\omega_0 n)u(n)$ | $\frac{z(z-\cos\omega_0)}{z^2-2z\cos\omega_0+1}$ | $\|z\| > 1$ |
 | $\sin(\omega_0 n)u(n)$ | $\frac{z\sin\omega_0}{z^2-2z\cos\omega_0+1}$ | $\|z\| > 1$ |
@@ -105,20 +113,18 @@
 
 | 性质<br>Property | 傅里叶级数<br>Fourier Series | 离散傅里叶级数<br>Discrete Fourier Series | 傅里叶变换<br>Fourier Transform | 离散傅里叶变换<br>Discrete Fourier Transform | 拉普拉斯变换<br>Laplace Transform | z变换<br>z-Transform |
 |-----------------|----------------------------|------------------------------------------|--------------------------------|---------------------------------------------|----------------------------------|-------------------|
-| **线性性**<br>**Linearity** | $af_1(t)+bf_2(t) \leftrightarrow ac_{1n}+bc_{2n}$ | $ax_1[n]+bx_2[n] \leftrightarrow aX_1[k]+bX_2[k]$ | $af_1(t)+bf_2(t) \leftrightarrow aF_1(\omega)+bF_2(\omega)$ | $ax_1[n]+bx_2[n] \leftrightarrow aX_1[k]+bX_2[k]$ | $af_1(t)+bf_2(t) \leftrightarrow aF_1(s)+bF_2(s)$ | $af_1(n)+bf_2(n) \leftrightarrow aF_1(z)+bF_2(z)$ |
-| **时移性**<br>**Time Shifting** | $f(t-t_0) \leftrightarrow c_n e^{-jn\omega_0 t_0}$ | $x[n-m] \leftrightarrow X[k]e^{-j2\pi km/N}$ | $f(t-t_0) \leftrightarrow F(\omega)e^{-j\omega t_0}$ | $x[n-m] \leftrightarrow X[k]e^{-j2\pi km/N}$ | $f(t-t_0)u(t-t_0) \leftrightarrow F(s)e^{-st_0}$ | $f(n-k) \leftrightarrow z^{-k}F(z)$ |
-| **时间反转**<br>**Time Reversal** | $f(-t) \leftrightarrow c_{-n}$ | $x[-n] \leftrightarrow X[-k]$ | $f(-t) \leftrightarrow F(-\omega)$ | $x[(-n))_N] \leftrightarrow X[(-k))_N]$ | - | $f(-n) \leftrightarrow F(z^{-1})$ |
-| **时间尺度变换**<br>**Time Scaling** | $f(at) \leftrightarrow c_n$ (周期变为T/a) | - | $f(at) \leftrightarrow \frac{1}{\|a\|}F(\omega/a)$ | - | $f(at) \leftrightarrow \frac{1}{a}F(s/a)$ (a>0) | - |
-| **乘法性质**<br>**Multiplication** | $f(t)g(t) \leftrightarrow \sum_{m=-\infty}^{\infty} c_{n-m}d_m$ | $x[n]y[n] \leftrightarrow \frac{1}{N}\sum_{l=0}^{N-1} X[l]Y[k-l]$ | $f(t)g(t) \leftrightarrow \frac{1}{2\pi}F(\omega)*G(\omega)$ | $x[n]y[n] \leftrightarrow \frac{1}{N}X[k]\circledast Y[k]$ | - | - |
-| **共轭对称性**<br>**Conjugate Symmetry** | $ f^\ast (t) \leftrightarrow c_{-n}^\ast $ | $x^*[n] \leftrightarrow X^*[(-k))_N]$ | $f^*(t) \leftrightarrow F^*(-\omega)$ | $x^*[n] \leftrightarrow X^*[(-k))_N]$ | $f^*(t) \leftrightarrow F^*(s^*)$ | $f^*[n] \leftrightarrow F^*(z^*)$ |
-| **频移性**<br>**Frequency Shifting** | $f(t)e^{jm\omega_0 t} \leftrightarrow c_{n-m}$ | $x[n]e^{j2\pi ln/N} \leftrightarrow X[k-l]$ | $f(t)e^{j\omega_0 t} \leftrightarrow F(\omega-\omega_0)$ | $x[n]e^{j2\pi ln/N} \leftrightarrow X[k-l]$ | $f(t)e^{-s_0 t} \leftrightarrow F(s+s_0)$ | $a^n f(n) \leftrightarrow F(z/a)$ |
-| **微分性**<br>**Differentiation** | $\frac{df(t)}{dt} \leftrightarrow jn\omega_0 c_n$ | - | $\frac{df(t)}{dt} \leftrightarrow j\omega F(\omega)$ | - | $\frac{df(t)}{dt} \leftrightarrow sF(s)-f(0^-)$ | - |
-| **差分性**<br>**Difference** | - | $x[n+1]-x[n] \leftrightarrow (1-e^{-j2\pi k/N})X[k]$ | - | $x[n+1]-x[n] \leftrightarrow (1-e^{-j2\pi k/N})X[k]$ | - | $f(n+1) \leftrightarrow zF(z)-zf(0)$ |
-| **积分性**<br>**Integration** | $\int_{-\infty}^t f(\tau)d\tau \leftrightarrow \frac{c_n}{jn\omega_0}$ (n≠0) | - | $\int_{-\infty}^t f(\tau)d\tau \leftrightarrow \frac{F(\omega)}{j\omega}+\pi F(0)\delta(\omega)$ | - | $\int_0^t f(\tau)d\tau \leftrightarrow \frac{F(s)}{s}$ | - |
-| **求和性**<br>**Summation** | - | $\sum_{m=0}^{n} x[m] \leftrightarrow \frac{X[k]}{1-e^{-j2\pi k/N}}$ | - | $\sum_{m=0}^{n} x[m] \leftrightarrow \frac{X[k]}{1-e^{-j2\pi k/N}}$ | - | - |
-| **卷积性**<br>**Convolution** | $f_1(t)*f_2(t) \leftrightarrow Tc_{1n}c_{2n}$ | $x_1[n]\circledast x_2[n] \leftrightarrow X_1[k]X_2[k]$ | $f_1(t)*f_2(t) \leftrightarrow F_1(\omega)F_2(\omega)$ | $x_1[n]*x_2[n] \leftrightarrow X_1[k]X_2[k]$ | $f_1(t)*f_2(t) \leftrightarrow F_1(s)F_2(s)$ | $f_1(n)*f_2(n) \leftrightarrow F_1(z)F_2(z)$ |
-| **对偶性**<br>**Duality** | - | $X[n] \leftrightarrow Nx[-k]$ | $F(t) \leftrightarrow 2\pi f(-\omega)$ | $X[n] \leftrightarrow Nx[-k]$ | - | - |
-| **Parseval定理**<br>**Parseval's Theorem** | $\frac{1}{T}\int_{-T/2}^{T/2}\|f(t)\|^2dt = \sum_{n=-\infty}^{\infty}\|c_n\|^2$ | $\sum_{n=0}^{N-1}\|x[n]\|^2 = \frac{1}{N}\sum_{k=0}^{N-1}\|X[k]\|^2$ | $\int_{-\infty}^{\infty}\|f(t)\|^2dt = \frac{1}{2\pi}\int_{-\infty}^{\infty}\|F(\omega)\|^2d\omega$ | $\sum_{n=0}^{N-1}\|x[n]\|^2 = \frac{1}{N}\sum_{k=0}^{N-1}\|X[k]\|^2$ | $\int_0^{\infty}\|f(t)\|^2dt = \frac{1}{2\pi j}\int_{\sigma-j\infty}^{\sigma+j\infty}\|F(s)\|^2ds$ | $\sum_{n=0}^{\infty}\|f(n)\|^2 = \frac{1}{2\pi j}\oint\|F(z)\|^2z^{-1}dz$ |
+| <font color="blue">**线性性**<br>**Linearity**</font> | $af_1(t)+bf_2(t) \leftrightarrow ac_{1n}+bc_{2n}$ | $ax_1[n]+bx_2[n] \leftrightarrow aX_1[k]+bX_2[k]$ | $ax_1(t)+bx_2(t) \leftrightarrow aX_1(j\omega)+bX_2(j\omega)$ | $ax_1[n]+bx_2[n] \leftrightarrow aX_1(j\omega)+bX_2(j\omega)$ | $af_1(t)+bf_2(t) \leftrightarrow aF_1(s)+bF_2(s)$ | $af_1(n)+bf_2(n) \leftrightarrow aF_1(z)+bF_2(z)$ |
+| <font color="blue">**时移性**<br>**Time Shifting**</font> | $f(t-t_0) \leftrightarrow c_n e^{-jn\omega_0 t_0}$ | $x[n-m] \leftrightarrow X[k]e^{-j2\pi km/N}$ | $\color{red}x(t-t_0) \leftrightarrow X(j\omega)e^{-j\omega t_0}$ | $x[n-n_0] \leftrightarrow X(j\omega)e^{-j\omega n_0}$ | $f(t-t_0)u(t-t_0) \leftrightarrow F(s)e^{-st_0}$ | $\color{red}f(n-k) \leftrightarrow z^{-k}F(z)$ |
+| **频移性**<br>**Frequency Shifting** | $f(t)e^{jm\omega_0 t} \leftrightarrow c_{n-m}$ | $x[n]e^{j2\pi ln/N} \leftrightarrow X[k-l]$ | $x(t)e^{j\omega_0 t} \leftrightarrow X(j(\omega-\omega_0))$ | $x[n]e^{j\omega n_0} \leftrightarrow X(e^{j(\omega-\omega_0)})$ | $f(t)e^{-s_0 t} \leftrightarrow F(s+s_0)$ | $a^n f(n) \leftrightarrow F(z/a)$ |
+| <font color="blue">**时间反转**<br>**Time Reversal**</font> | $f(-t) \leftrightarrow c_{-n}$ | $x[-n] \leftrightarrow X[-k]$ | $x(-t) \leftrightarrow X(-j\omega)$ | $x[-n] \leftrightarrow X(e^{-j\omega})$ | - | $f(-n) \leftrightarrow F(z^{-1})$ |
+| <font color="blue">**时间尺度变换**<br>**Time Scaling**</font> | $f(at) \leftrightarrow c_n$ (周期变为T/a) | - | $\color{red}x(at) \leftrightarrow \frac{1}{\|a\|}X(j\omega/a)$ | $x_k[n] \leftrightarrow X(e^{jk\omega})$ <br> $x_k[n]=\begin{cases} x[n/k] , if\ n\ is\ a\ multiple\ of\ k \\ 0 , others \end{cases}$ | $ f(at) \leftrightarrow \frac{1}{a} F(s/a)$ (a>0) | - |
+| <font color="blue">**乘法性质**<br>**Multiplication**</font> | $f(t)g(t) \leftrightarrow \sum_{m=-\infty}^{\infty} c_{n-m}d_m$ | $x[n]y[n] \leftrightarrow \frac{1}{N}\sum_{l=0}^{N-1} X[l]Y[k-l]$ | $\color{red}x(t)y(t) \leftrightarrow \frac{1}{2\pi}X(j\omega)*Y(j\omega)$ | $x[n]y[n] \leftrightarrow \frac{1}{2\pi}X(e^{j\omega})*Y(e^{j\omega})=\frac{1}{2\pi}\int_{2\pi}X_1(e^{j\theta})X_2(e^{j(\omega-\theta)})d\theta$ | - | - |
+| <font color="blue">**共轭对称性**<br>**Conjugate Symmetry**</font> | $ f^\ast (t) \leftrightarrow c_{-n}^\ast $ | $x^*[n] \leftrightarrow X^*([(-k))_N])$ | $x^*(t) \leftrightarrow X^*(-j\omega)$ | $x^*[n] \leftrightarrow X^*(e^{-j\omega})$ | $f^*(t) \leftrightarrow F^*(s^*)$ | $f^*[n] \leftrightarrow F^*(z^*)$ |
+| **微分性**<br>**Differentiation** | $\frac{df(t)}{dt} \leftrightarrow jn\omega_0 c_n$ | $x[n+1]-x[n] \leftrightarrow (1-e^{-j2\pi k/N})X[k]$ | $\color{red}\frac{dx(t)}{dt} \leftrightarrow j\omega X(j\omega)$ | $x[n]-x[n-1] \leftrightarrow (1-e^{j\omega})X(e^{j\omega})$ <br> $nx[n] \leftrightarrow j\frac{dX(e^{j\omega})}{d\omega}$| $\frac{df(t)}{dt} \leftrightarrow sF(s)-f(0^-)$ | $f(n+1) \leftrightarrow zF(z)-zf(0)$ |
+| **积分性**<br>**Integration** | $\int_{-\infty}^t f(\tau)d\tau \leftrightarrow \frac{c_n}{jn\omega_0}$ (n≠0) | $\sum_{m=0}^{n} x[m] \leftrightarrow \frac{X[k]}{1-e^{-j2\pi k/N}}$ | $\color{red}\int_{-\infty}^t x(\tau)d\tau \leftrightarrow \frac{X(j\omega)}{j\omega}+\pi X(j0)\delta(\omega)$ | $\sum_{m=-\infty}^{n} x[m] \leftrightarrow \frac{X(e^{j\omega})}{1-e^{-j\omega}} + \color{red}\pi X(e^{j0})\sum_{k=-\infty}^{\infty}\delta(\omega-2\pi k)$ | $\int_0^t f(\tau)d\tau \leftrightarrow \frac{F(s)}{s}$ | - |
+| <font color="blue">**卷积性**<br>**Convolution**</font> | $f_1(t)*f_2(t) \leftrightarrow Tc_{1n}c_{2n}$ | $x_1[n]\circledast x_2[n] \leftrightarrow X_1[k]X_2[k]$ | $x_1(t)*x_2(t) \leftrightarrow X_1(j\omega)X_2(j\omega)$ | $x_1[n]*x_2[n] \leftrightarrow X_1(e^{j\omega})X_2(e^{j\omega})$ | $f_1(t)*f_2(t) \leftrightarrow F_1(s)F_2(s)$ | $f_1(n)*f_2(n) \leftrightarrow F_1(z)F_2(z)$ |
+| **对偶性**<br>**Duality** | - | $X[n] \leftrightarrow Nx[-k]$ | $\color{red}X(jt) \leftrightarrow 2\pi x(-\omega)$ | - | - | - |
+| **Parseval定理**<br>**Parseval's Theorem** | $\frac{1}{T}\int_{-T/2}^{T/2}\|f(t)\|^2dt = \sum_{n=-\infty}^{\infty}\|c_n\|^2$ | $\sum_{n=0}^{N-1}\|x[n]\|^2 = \frac{1}{N}\sum_{k=0}^{N-1}\|X[k]\|^2$ | $\color{red}\int_{-\infty}^{\infty}\|x(t)\|^2dt = \frac{1}{2\pi}\int_{-\infty}^{\infty}\|X(j\omega)\|^2d\omega$ | $\sum_{n=-\infty}^{\infty}\|x[n]\|^2 = \frac{1}{2\pi}\int_{2\pi}\|X(e^{j\omega})\|^2d\omega$ | $\int_0^{\infty}\|f(t)\|^2dt = \frac{1}{2\pi j}\int_{\sigma-j\infty}^{\sigma+j\infty}\|F(s)\|^2ds$ | $\sum_{n=0}^{\infty}\|f(n)\|^2 = \frac{1}{2\pi j}\oint\|F(z)\|^2z^{-1}dz$ |
 
 ## 5. 应用场景对比 / Application Scenarios Comparison
 
